@@ -57,47 +57,7 @@ if($_POST['rackid']>0 || @$device['rack']>0) {
 	$rack_contents = $Racks->fetch_rack_contents($rack->id);
 
 	// available spaces
-	$available = array();
-	$available_back = array ();
-
-	for($m=1; $m<=$rack->size; $m++) {
-	    $available[$m] = $m;
-	}
-
-	// available back
-	if($rack->hasBack!="0") {
-		for($m=1; $m<=$rack->size; $m++) {
-			$available_back[$m+$rack->size] = $m;
-		}
-	}
-
-	if($rack_devices!==false) {
-	    // remove units used by devices
-	    foreach ($rack_devices as $d) {
-	        for($m=$d->rack_start; $m<=($d->rack_start+($d->rack_size-1)); $m++) {
-		    unset($available[$m]); unset($available_back[$m]);
-	        }
-	    }
-	    // place back current device (if present)
-	    if (isset($device['rack_start'])) {
-	        for($m=$device['rack_start']; $m<=($device['rack_start']+($device['rack_size']-1)); $m++) {
-		   if ($m >= $rack->size) {
-		   	$available_back[$m] = $m - $rack->size;
-		   } else {
-		   	$available[$m] = $m - $rack->size;
-		   }
-	        }
-	    }
-	}
-
-	if ($rack_contents !== false) {
-	    // remove units used by special rack devices too
-	    foreach ($rack_contents as $d) {
-	        for($m=$d->rack_start; $m<=($d->rack_start+($d->rack_size-1)); $m++) {
-		    unset($available[$m]); unset($available_back[$m]);
-		}
-	    }
-	}
+	list($available, $available_back) = $Racks->free_u($rack, $rack_devices, $rack_contents, $device);
 	?>
 
 	<tr>
